--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <main>
         <h1 class="title-text">Google</h1>
         <div class="input-bar">
+<!--             This is how you get an item imported from the internet -->
             <i class="fa-solid fa-magnifying-glass"></i>
             <input title="search" />
             <div>
